--- a/.github/workflows/hellow_world.yml
+++ b/.github/workflows/hellow_world.yml
@@ -8,6 +8,11 @@ jobs:
       env:
         MY_VAR: Hello World!
         MY_NAME: Abel_Tu
+    - name: Set up Python 3.9.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.10
       run: |
         echo $MY_VAR
         echo My name is $MY_NAME
+        python
