--- a/.github/workflows/hellow_world.yml
+++ b/.github/workflows/hellow_world.yml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.10
-      run: |
+      run:
         echo $MY_VAR
         echo My name is $MY_NAME
         python
