--- a/.github/workflows/hellow_world.yml
+++ b/.github/workflows/hellow_world.yml
@@ -1,18 +1,22 @@
+name: Hello World
 on: push
 jobs:
   my_first_job:
     name: My first job
-    runs-on: macos-10.15
+    runs-on: mac-10.15.7
+    steps:
+    - name: checkout
+      uses: actions/checkout@master
+    - name: Run a single-line script
+      run: echo "Hello World!"
+  my_second_job:
+    name: My second job
+    runs-on: macos-latest
     steps:
     - name: Run a multi-line script
       env:
         MY_VAR: Hello World!
         MY_NAME: Abel_Tu
-    - name: Set up Python 3.9.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.10
-      run:
+      run: |
         echo $MY_VAR
-        echo My name is $MY_NAME
-        python
+        echo My name is $MY_NAM
