--- a/.github/workflows/hellow_world.yml
+++ b/.github/workflows/hellow_world.yml
@@ -7,8 +7,7 @@ jobs:
     steps:
     - uses: actions/setup-python@v2
     with:
-    python-version: '3.9.7' 
-    architecture: 'x64' 
+    python-version: '3.x' 
     - run: python
 
 
