--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -4,11 +4,16 @@ jobs:
   my-job:
     name: set up python3
     runs-on: macos-10.15
-    steps:
-    - uses: actions/setup-python@v2
-      with:
-        python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-        architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
-    - run: python -h
+    steps:  
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.8
+    uses: actions/setup-python@v2
+    with:
+      python-version: 3.8
+    - uses: s-weigand/setup-conda@v1
+    with:
+      activate-conda: false
+    - run: conda --version
+    - run: which python
 
 
