--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -4,12 +4,12 @@ jobs:
   my-job:
     name: set up python3
     runs-on: macos-10.15
-    steps:  
-    - uses: actions/checkout@v2
+    steps:
     - name: Set up Python 3.8
     - uses: actions/setup-python@v2
       with:
       python-version: 3.8
+    - name: Set up conda
     - uses: s-weigand/setup-conda@v1
       with:
       activate-conda: false
