--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -16,7 +16,7 @@ jobs:
           python-version: 3.9
       - uses: s-weigand/setup-conda@v1
         with:
-          activate-conda: false
+          activate-conda: true
       - run: conda --version
       - run: which python
       - run: conda create -n manyFEMS python=3.9
