"update yaml file for github action"

--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -23,5 +23,6 @@ jobs:
       - run: conda install numpy
       - run: conda install xlrd
       - run: conda list
+      - run: conda init bash
       - run: conda activate manyFEMS
 
