--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -19,12 +19,7 @@ jobs:
           activate-conda: true
       - name: run a multi-line script
         run: |
-          conda --version
           which python
-          conda create -n manyFEMS python=3.9
-          conda install numpy
-          conda install xlrd
-          conda list
-          conda init bash
-          conda activate manyFEMS
+          echo hellow world
+
 
