--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -21,5 +21,6 @@ jobs:
         run: |
           which python
           echo hellow world
+          python GenerateRiverFlows/hellow_world.py
 
 
