"update yaml file for github action"

--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -22,6 +22,7 @@ jobs:
       - name: install Python dependencies
         run: |
           conda create -n manyFEMS
+          conda activate manyFEMS
 
       - name: test python environment and 'hello world' CI
         run: |
