"update yaml file for github action"

--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           conda create -n manyFEMS
           conda install numpy
+          conda install xlrd
 
       - name: test python environment and 'hello world' CI
         run: |
