--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -31,5 +31,8 @@ jobs:
           echo hellow world
           python GenerateRiverFlows/hellow_world.py
 
+      - name: run script 'GenerateRiverFlows.py'
+        run: python GenerateRiverFlows.py
+
 
 
