"update yaml file for github action"

--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -32,7 +32,9 @@ jobs:
           python GenerateRiverFlows/hellow_world.py
 
       - name: run script 'GenerateRiverFlows.py'
-        run: python GenerateRiverFlows/GenerateRiverFlows.py
+        run: |
+          ls GenerateRiverFlows
+          python GenerateRiverFlows/GenerateRiverFlows.py
 
 
 
