"update yaml file for github action"

--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: run script 'GenerateRiverFlows.py'
         run: |
-          ls GenerateRiverFlows
+          which GenerateRiverFlows
           python GenerateRiverFlows/GenerateRiverFlows.py
 
 
