"update yaml file for github action"

--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -33,7 +33,8 @@ jobs:
 
       - name: run script 'GenerateRiverFlows.py'
         run: |
-          python GenerateRiverFlows/GenerateRiverFlows.py
+          cd GenerateRiverFlows
+          python GenerateRiverFlows.py
 
 
 
