--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           conda create -n manyFEMS
           conda install numpy
-          conda install xlrd
+          conda install xlrd==1.2.0
 
       - name: test python environment and 'hello world' CI
         run: |
