--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -5,12 +5,8 @@ jobs:
   setEnv:
     name: set up python conda environment
     runs-on: macos-10.15
- #   defaults:
- #     run:
- #       shell: bash -l {0}
     steps:
       - uses: actions/checkout@v2
-
       - name: Set up Python 3.9.7
         uses: actions/setup-python@v2
         with:
@@ -18,10 +14,9 @@ jobs:
       - uses: s-weigand/setup-conda@v1
         with:
           activate-conda: true
-
       - name: install Python dependencies
         run: |
-          conda create -n manyFEMS
+#          conda create -n manyFEMS
           conda install numpy
           conda install xlrd==1.2.0
 
