--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -15,11 +15,7 @@ jobs:
         with:
           activate-conda: true
       - name: install Python dependencies
-        run: |
-          conda create -n manyFEMS
-          conda install numpy
-          conda install xlrd==1.2.0
-          
+        run: conda env create -f ./condaEnv/condaEnv.yaml
 
       - name: test python environment and 'hello world' CI
         run: |
