--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -18,8 +18,7 @@ jobs:
         run: |
           conda env create -f ./condaEnv/manyFEMSdependency.yml
           which python
-          conda init bash
-          conda activate manyFEWS
+          source activate manyFEWS
           which python
 
       - name: test python environment and 'hello world' CI
