--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -7,16 +7,14 @@ jobs:
     runs-on: macos-10.15
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 3.9.7
-        uses: actions/setup-python@v2
+      - uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: 3.9
-      - uses: s-weigand/setup-conda@v1
- #       with:
- #         activate-conda: true
-      - name: install Python dependencies
+          auto-update-conda: false
+          activate-environment: explicit-env
+          environment-file: ./condaEnv/manyFEMSdependency.yml
+
+      - name: check Python dependencies
         run: |
-          conda env create -f ./condaEnv/manyFEMSdependency.yml
           which python
           source activate manyFEWS
           which python
