--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -6,13 +6,19 @@ jobs:
     name: set up python conda environment
     runs-on: macos-10.15
     steps:
-      - uses: actions/checkout@v2
-      - uses: conda-incubator/setup-miniconda@v2
-        with:
-          auto-update-conda: false
-          activate-environment: explicit-env
-          environment-file: ./condaEnv/manyFEMSdependency.yml
-
+       - uses: actions/checkout@v2
+       - name: Set up Python 3.9.7
+         uses: actions/setup-python@v2
+         with:
+           python-version: 3.9
+       - uses: s-weigand/setup-conda@v1
+         with:
+           activate-conda: true
+       - name: install Python dependencies
+         run: |
+           conda create -n manyFEMS
+           conda install numpy
+           conda install xlrd==1.2.0
       - name: check Python dependencies
         run: |
           which python
