--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -11,13 +11,20 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - uses: s-weigand/setup-conda@v1
+    steps:
+      - uses: actions/checkout@v2
+      - name: Anaconda-Action
+        id: step1
+        uses: fdiblen/anaconda-action@0.1.7
         with:
-          activate-conda: true
-      - name: install Python dependencies
-        run: |
-          conda create -n manyFEMS
-          conda install --yes --file ./condaEnv/requirements.txt
+          envFileName: './condaEnv/manyFEMSenv.yml'
+#      - uses: s-weigand/setup-conda@v1
+#        with:
+#          activate-conda: true
+#      - name: install Python dependencies
+#        run: |
+#          conda create -n manyFEMS
+#          conda install --yes --file ./condaEnv/requirements.txt
 #          conda install numpy
 #          conda install xlrd==1.2.0
       - name: check Python dependencies
