--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -5,12 +5,12 @@ jobs:
   setEnv:
     name: set up python conda environment
     runs-on: macos-10.15
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.9.7
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Set up Python 3.9.7
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: 3.9
     steps:
       - uses: actions/checkout@v2
       - name: Anaconda-Action
