--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -31,3 +31,21 @@ jobs:
         run: |
           cd GenerateRiverFlows
           python GenerateRiverFlows.py
+
+  example-3:
+    name: Ex3 Linux
+    runs-on: macos-10.15
+    defaults:
+      run:
+        shell: bash -l {0}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: anaconda-client-env
+          environment-file: condaEnv/manyFEMSenv.yml
+          python-version: 3.9
+          auto-activate-base: false
+      - run: |
+          conda info
+          conda list
