"update github action workflow yaml file"

--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -32,8 +32,8 @@ jobs:
           cd GenerateRiverFlows
           python GenerateRiverFlows.py
 
-  example-3:
-    name: Ex3 Linux
+  setEnv:
+    name: set up python conda environment
     runs-on: macos-10.15
     defaults:
       run:
@@ -49,3 +49,16 @@ jobs:
       - run: |
           conda info
           conda list
+
+      - name: check Python dependencies
+        run: |
+          which python
+      - name: test python environment and 'hello world' CI
+        run: |
+          which python
+          echo hellow world
+          python GenerateRiverFlows/hellow_world.py
+      - name: run script 'GenerateRiverFlows.py'
+        run: |
+          cd GenerateRiverFlows
+          python GenerateRiverFlows.py
