"update the workflow yaml file."

--- a/.github/workflows/setup_python_conda.yml
+++ b/.github/workflows/setup_python_conda.yml
@@ -21,4 +21,5 @@ jobs:
           conda list
       - name: run test script 'test_GenerateRiverFlows.py'
         run: |
-          pytest test_manyFEMS/unit/test_GenerateRiverFlow/test_GenerateRiverFlows.py
+          pwd
+          pytest ./test_manyFEMS/unit/test_GenerateRiverFlow/test_GenerateRiverFlows.py
