--- a/condaEnv/manyFEMSenv.yml
+++ b/condaEnv/manyFEMSenv.yml
@@ -1,18 +1,24 @@
 name: ManyFEWS
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - appdirs=1.4.4=pyhd3eb1b0_0
+  - asgiref=3.5.0=pyhd8ed1ab_0
   - attrs=21.4.0=pyhd3eb1b0_0
   - black=19.10b0=py_0
   - blas=1.0=mkl
-  - ca-certificates=2021.10.26=hecd8cb5_2
-  - certifi=2021.10.8=py39hecd8cb5_2
+  - ca-certificates=2021.10.8=h033912b_0
+  - certifi=2021.10.8=py39h6e9494a_1
   - click=8.0.3=pyhd3eb1b0_0
+  - django=4.0=pyhd8ed1ab_1
   - iniconfig=1.1.1=pyhd3eb1b0_0
   - intel-openmp=2021.4.0=hecd8cb5_3538
+  - krb5=1.17.2=h60d9502_0
   - libcxx=12.0.0=h2f01273_0
+  - libedit=3.1.20191231=h0678c8f_2
   - libffi=3.3=hb1e8313_2
+  - libpq=12.3=h7049927_3
   - mkl=2021.4.0=hecd8cb5_637
   - mkl-service=2.4.0=py39h9ed2024_0
   - mkl_fft=1.3.1=py39h4ab4a9b_0
@@ -21,20 +27,24 @@ dependencies:
   - ncurses=6.3=hca72f7f_2
   - numpy=1.21.2=py39h4b4dc7a_0
   - numpy-base=1.21.2=py39he0bd621_0
-  - openssl=1.1.1m=hca72f7f_0
+  - openssl=1.1.1l=h0d85af4_0
   - packaging=21.3=pyhd3eb1b0_0
   - pathspec=0.7.0=py_0
   - pip=21.2.4=py39hecd8cb5_0
   - pluggy=1.0.0=py39hecd8cb5_0
+  - psycopg2=2.8.6=py39hbcfaee0_1
   - py=1.10.0=pyhd3eb1b0_0
   - pyparsing=3.0.4=pyhd3eb1b0_0
   - pytest=6.2.5=py39hecd8cb5_2
   - python=3.9.7=h88f2d9e_1
+  - python_abi=3.9=2_cp39
+  - pytz=2021.3=pyhd8ed1ab_0
   - readline=8.1.2=hca72f7f_1
   - regex=2021.11.2=py39hca72f7f_0
   - setuptools=58.0.4=py39hecd8cb5_0
   - six=1.16.0=pyhd3eb1b0_0
   - sqlite=3.37.0=h707629a_0
+  - sqlparse=0.4.2=pyhd8ed1ab_0
   - tk=8.6.11=h7bc2e8c_0
   - toml=0.10.2=pyhd3eb1b0_0
   - typed-ast=1.4.3=py39h9ed2024_1
@@ -44,4 +54,3 @@ dependencies:
   - xlrd=1.2.0=py_0
   - xz=5.2.5=h1de35cc_0
   - zlib=1.2.11=h4dc903c_4
-prefix: /Users/abeltu/opt/anaconda3/envs/ManyFEWS
