--- a/condaEnv/manyFEMSenv.yml
+++ b/condaEnv/manyFEMSenv.yml
@@ -12,6 +12,7 @@ dependencies:
   - certifi=2021.10.8=py39h6e9494a_1
   - click=8.0.3=pyhd3eb1b0_0
   - django=4.0=pyhd8ed1ab_1
+  - django-leaflet=0.28.1=pyh6c4a22f_0
   - iniconfig=1.1.1=pyhd3eb1b0_0
   - intel-openmp=2021.4.0=hecd8cb5_3538
   - krb5=1.17.2=h60d9502_0
@@ -30,7 +31,7 @@ dependencies:
   - openssl=1.1.1l=h0d85af4_0
   - packaging=21.3=pyhd3eb1b0_0
   - pathspec=0.7.0=py_0
-  - pip=21.2.4=py39hecd8cb5_0
+  - pip=21.3.1=pyhd8ed1ab_0
   - pluggy=1.0.0=py39hecd8cb5_0
   - psycopg2=2.8.6=py39hbcfaee0_1
   - py=1.10.0=pyhd3eb1b0_0
@@ -54,3 +55,6 @@ dependencies:
   - xlrd=1.2.0=py_0
   - xz=5.2.5=h1de35cc_0
   - zlib=1.2.11=h4dc903c_4
+  - pip:
+    - django-geojson==3.2.0
+prefix: /usr/local/Caskroom/miniconda/base/envs/ManyFEWS
