--- a/.github/workflows/run_unitTest_GenerateRiverFlows.yml
+++ b/.github/workflows/run_unitTest_GenerateRiverFlows.yml
@@ -11,7 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: psf/black@stable
-        rev: 19.10b0
+        with:
+          version: "19.10b0"
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: anaconda-client-env
