--- a/.github/workflows/run_unitTest_GenerateRiverFlows.yml
+++ b/.github/workflows/run_unitTest_GenerateRiverFlows.yml
@@ -2,12 +2,27 @@ name: set up python environment
 on: push
 
 jobs:
-  setEnv:
-    name: set up python conda environment and run
+
+  test:
+    name: Set up and test
     runs-on: macos-10.15
     defaults:
       run:
         shell: bash -l {0}
+
+    services:
+      postgres:
+        image: postgis/postgis:14-3.2
+        env:
+          # must specify password for PG Docker container image, see: https://registry.hub.docker.com/_/postgres?tab=description&page=1&name=10
+          POSTGRES_USER: manyfews
+          POSTGRES_PASSWORD: manyfews
+          POSTGRES_DB: manyfews
+        ports:
+          - 5432:5432
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
       - uses: actions/checkout@v2
       - uses: psf/black@stable
@@ -25,3 +40,9 @@ jobs:
       - name: run test script 'test_GenerateRiverFlows.py'
         run: |
           pytest ./test_manyFEMS/unit/test_GeneraterRiverFlow/test_GenerateRiverFlows.py
+      - name: Run Django migrations
+        run: python manage.py migrate
+        working-directory: manyfews
+      - name: Run Django tests
+        run: python manage.py test
+        working-directory: manyfews
