Switch to ubuntu to use docker
...and await conda issues!

--- a/.github/workflows/run_unitTest_GenerateRiverFlows.yml
+++ b/.github/workflows/run_unitTest_GenerateRiverFlows.yml
@@ -5,7 +5,7 @@ jobs:
 
   test:
     name: Set up and test
-    runs-on: macos-10.15
+    runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash -l {0}
