--- a/.github/workflows/run_unitTest_GenerateRiverFlows.yml
+++ b/.github/workflows/run_unitTest_GenerateRiverFlows.yml
@@ -28,6 +28,9 @@ jobs:
       - uses: psf/black@stable
         with:
           version: "19.10b0"
+      - name: Install dependencies
+          run: |
+            sudo apt-get install binutils libproj-dev gdal-bin
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: anaconda-client-env
