--- a/condaEnv/manyFEMSenv.yml
+++ b/condaEnv/manyFEMSenv.yml
@@ -17,4 +17,5 @@ dependencies:
   - pytest
   - pip:
     - django-geojson==3.2.0
+    - django-environ
 prefix: /usr/local/Caskroom/miniconda/base/envs/ManyFEWS
