--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,6 @@ dmypy.json
 #Ingore the Grib2_utils file
 /Grib2_utils
 
-#Ingore the env parameter
+# Make sure the .env file is not committed
 /manyfews/manyfews/.env
 
