--- a/condaEnv/manyFEMSenv.yml
+++ b/condaEnv/manyFEMSenv.yml
@@ -18,4 +18,5 @@ dependencies:
   - pip:
     - django-geojson==3.2.0
     - django-environ
+    - retry
 prefix: /usr/local/Caskroom/miniconda/base/envs/ManyFEWS
