" latValue and lonValue as settings in the .env file. "

--- a/manyfews/manyfews/.env.CI
+++ b/manyfews/manyfews/.env.CI
@@ -1,2 +1,10 @@
-zentra_un=zentraCloudUserName
-zentra_pw=zentraCloudPassword
+zentra_un=zentraCloudUserName # the user name of your Zentra Cloud account.
+zentra_pw=zentraCloudPassword # the passwor of your Zentra Cloud account.
+latValue=-80.5  # the latitude of the specific cell in GEFS grid.
+                # (the solution is 0.5 degree. range [-90, 90] with 0.5 interval)
+lonValue=175    # the lonitude of the specific cell in GEFS grid.
+                # (the solution is 0.5 degree. range [-90, 90] with 0.5 interval)
+zentra_backtime=0.5 # the back days number you want to extract (unit: day) from Zentra Cloud.
+station_SN=06-02047 # the serial number of meter station.
+gefs_timestep=0.25 # Specify time-step in days of GEFS file. ( the interval is every 0.125 day(3 hours))
+gefs_forecastDays=16 # Number of Days into the future that the forecast of GEFS data is for.
