--- a/condaEnv/manyFEMSenv.yml
+++ b/condaEnv/manyFEMSenv.yml
@@ -19,4 +19,5 @@ dependencies:
     - django-geojson==3.2.0
     - django-environ
     - retry
+    - git+https://github.com/mt-climate-office/Zentra-APIgit+https://github.com/mt-climate-office/Zentra-API
 prefix: /usr/local/Caskroom/miniconda/base/envs/ManyFEWS
