--- a/condaEnv/manyFEMSenv.yml
+++ b/condaEnv/manyFEMSenv.yml
@@ -3,14 +3,91 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - numpy=1.21.2
-  - xlrd=1.2.0
-  - pip
-  - psycopg2
-  - django
-  - django-leaflet
-  - celery
-  - django-celery-beat
+  - amqp=5.0.9=pyhd8ed1ab_0
+  - asgiref=3.5.0=pyhd8ed1ab_0
+  - attrs=21.4.0=pyhd8ed1ab_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - billiard=3.6.4.0=py39h89e85a6_1
+  - black=22.1.0=pyhd8ed1ab_0
+  - bzip2=1.0.8=h0d85af4_4
+  - ca-certificates=2021.10.26=hecd8cb5_2
+  - celery=5.2.3=pyhd8ed1ab_0
+  - cffi=1.15.0=py39he338e87_0
+  - cfgv=3.3.1=pyhd8ed1ab_0
+  - click=8.0.4=py39h6e9494a_0
+  - click-didyoumean=0.3.0=pyhd8ed1ab_0
+  - click-plugins=1.1.1=py_0
+  - click-repl=0.2.0=pyhd8ed1ab_0
+  - dataclasses=0.8=pyhc8e2a94_3
+  - distlib=0.3.4=pyhd8ed1ab_0
+  - django=4.0.2=py39h6e9494a_0
+  - django-celery-beat=2.2.1=pyhd8ed1ab_0
+  - django-leaflet=0.28.1=pyh6c4a22f_0
+  - django-timezone-field=4.1.2=pyhd8ed1ab_0
+  - djangorestframework=3.13.1=pyhd8ed1ab_0
+  - filelock=3.6.0=pyhd8ed1ab_0
+  - identify=2.4.11=pyhd8ed1ab_0
+  - iniconfig=1.1.1=pyh9f0ad1d_0
+  - kombu=5.2.3=py39h6e9494a_0
+  - krb5=1.19.2=h289aae4_3
+  - libblas=3.9.0=13_osx64_openblas
+  - libcblas=3.9.0=13_osx64_openblas
+  - libcxx=12.0.1=habf9029_1
+  - libedit=3.1.20191231=h0678c8f_2
+  - libffi=3.4.2=h0d85af4_5
+  - libgfortran=5.0.0=9_3_0_h6c81a4c_23
+  - libgfortran5=9.3.0=h6c81a4c_23
+  - liblapack=3.9.0=13_osx64_openblas
+  - libopenblas=0.3.18=openmp_h3351f45_0
+  - libpq=14.2=h8ce7ee7_0
+  - libzlib=1.2.11=h9173be1_1013
+  - llvm-openmp=13.0.1=hda6cdc1_0
+  - mypy_extensions=0.4.3=py39h6e9494a_4
+  - ncurses=6.3=he49afe7_0
+  - nodeenv=1.6.0=pyhd8ed1ab_0
+  - numpy=1.21.2=py39h7eed0ac_0
+  - openssl=3.0.0=h0d85af4_2
+  - packaging=21.3=pyhd8ed1ab_0
+  - pathspec=0.9.0=pyhd8ed1ab_0
+  - pip=22.0.3=pyhd8ed1ab_0
+  - platformdirs=2.5.1=pyhd8ed1ab_0
+  - pluggy=1.0.0=py39h6e9494a_2
+  - pre-commit=2.17.0=py39h6e9494a_0
+  - prompt-toolkit=3.0.27=pyha770c72_0
+  - prompt_toolkit=3.0.27=hd8ed1ab_0
+  - psycopg2=2.9.3=py39hdb5d3f9_0
+  - py=1.11.0=pyh6c4a22f_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pyparsing=3.0.7=pyhd8ed1ab_0
+  - pytest=7.0.1=py39h6e9494a_0
+  - python=3.9.10=hea1dfa3_2_cpython
+  - python-crontab=2.5.1=pyh9f0ad1d_0
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python_abi=3.9=2_cp39
+  - pytz=2021.3=pyhd8ed1ab_0
+  - pyyaml=6.0=py39h89e85a6_3
+  - readline=8.1=h05e3726_0
+  - retrying=1.3.3=pyhd3eb1b0_2
+  - setuptools=59.6.0=py39h6e9494a_0
+  - six=1.16.0=pyh6c4a22f_0
+  - sqlite=3.37.0=h23a322b_0
+  - sqlparse=0.4.2=pyhd8ed1ab_0
+  - tk=8.6.12=h5dbffcc_0
+  - toml=0.10.2=pyhd8ed1ab_0
+  - tomli=2.0.1=pyhd8ed1ab_0
+  - typed-ast=1.5.2=py39h89e85a6_0
+  - typing_extensions=4.1.1=pyha770c72_0
+  - tzdata=2021e=he74cb21_0
+  - ukkonen=1.0.1=py39hf018cea_1
+  - vine=5.0.0=pyhd8ed1ab_1
+  - virtualenv=20.13.1=py39h6e9494a_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - xlrd=1.2.0=pyh9f0ad1d_1
+  - xz=5.2.5=haf1e3a3_1
+  - yaml=0.2.5=h0d85af4_2
+  - zlib=1.2.11=h9173be1_1013
   # dev dependencies
   - black
   - pre-commit
