fixed naming error.

--- a/manyfews/manyfews/.env.CI
+++ b/manyfews/manyfews/.env.CI
@@ -2,7 +2,7 @@ zentra_un=zentraCloudUserName
 zentra_pw=zentraCloudPassword
 latValue=-80.5
 lonValue=175
-initial_backtime=365
+initial_backTime=365
 station_SN=06-02047
 gefs_forecastDays=16
 model_timestep=0.25
