--- a/.github/workflows/run_unitTest_GenerateRiverFlows.yml
+++ b/.github/workflows/run_unitTest_GenerateRiverFlows.yml
@@ -60,6 +60,7 @@ jobs:
         env:
           zentra_un: ${{ secrets.ZENTRA_CLOUD_USERNAME }}
           zentra_pw: ${{ secrets.ZENTRA_CLOUD_PASSWORD }}
+          mapbox_api_token: ${{ secrets.MAPBOX_API_TOKEN }}
         run: python manage.py test
         working-directory: manyfews
       - name: Check npm and webpack
