--- a/manyfews/package.json
+++ b/manyfews/package.json
@@ -20,6 +20,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.4",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0"
   }
