--- a/condaEnv/manyFEMSenv.yml
+++ b/condaEnv/manyFEMSenv.yml
@@ -11,6 +11,7 @@ dependencies:
   - django-leaflet
   - celery
   - django-celery-beat
+  - django-crispy-forms
   # dev dependencies
   - black
   - pre-commit
