--- a/.github/workflows/run_unitTest_GenerateRiverFlows.yml
+++ b/.github/workflows/run_unitTest_GenerateRiverFlows.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           sudo apt-get install binutils libproj-dev gdal-bin
       - name: Install chromedriver
-        uses: nanasess/setup-chromedriver@master
+        uses: nanasess/setup-chromedriver@v1
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: anaconda-client-env
