Support email settings in env files and CI

--- a/manyfews/manyfews/.env.CI
+++ b/manyfews/manyfews/.env.CI
@@ -7,3 +7,8 @@ station_SN=06-02047
 gefs_timestep=0.25
 gefs_forecastDays=16
 map_api_token=mapApiToken
+email_host=smtp.gmail.com
+email_port=465
+email_host_user=emailAddressOrUserName
+email_host_password=emailAccountPassword
+email_use_ssl=True
