--- a/condaEnv/manyFEMSenv.yml
+++ b/condaEnv/manyFEMSenv.yml
@@ -21,6 +21,7 @@ dependencies:
   - pip:
     - django-geojson==3.2.0
     - django-environ
+    - django-phonenumber-field[phonenumberslite]
     - git+https://github.com/mt-climate-office/Zentra-API
     - pygrib
 prefix: /usr/local/Caskroom/miniconda/base/envs/ManyFEWS
