Add verification for SMS numbers when creating/editing alerts

--- a/condaEnv/manyFEMSenv.yml
+++ b/condaEnv/manyFEMSenv.yml
@@ -12,6 +12,7 @@ dependencies:
   - celery
   - django-celery-beat
   - django-crispy-forms
+  - twilio
   # dev dependencies
   - black
   - pre-commit
