--- a/manyfews/manyfews/.env.CI
+++ b/manyfews/manyfews/.env.CI
@@ -12,3 +12,7 @@ email_port=465
 email_host_user=emailAddressOrUserName
 email_host_password=emailAccountPassword
 email_use_ssl=True
+twilio_account_sid=twilioAccontSID
+twilio_auth_token=twilioAuthToken
+twilio_phone_number=twilioPhoneNumber
+twilio_verification_sid=twilioVerificationServiceId
