Switch to using Stadia maps but make Leaflet map url configurable

--- a/manyfews/manyfews/.env.CI
+++ b/manyfews/manyfews/.env.CI
@@ -6,7 +6,7 @@ zentra_backtime=1
 station_SN=06-02047
 gefs_timestep=0.25
 gefs_forecastDays=16
-map_api_token=mapApiToken
+map_url=https://tiles.stadiamaps.com/tiles/osm_bright/{z}/{x}/{y}{r}.png
 email_host=smtp.gmail.com
 email_port=465
 email_host_user=emailAddressOrUserName
