--- a/.github/workflows/run_unitTest_GenerateRiverFlows.yml
+++ b/.github/workflows/run_unitTest_GenerateRiverFlows.yml
@@ -58,7 +58,7 @@ jobs:
         env:
           zentra_un: ${{ secrets.ZENTRA_CLOUD_USERNAME }}
           zentra_pw: ${{ secrets.ZENTRA_CLOUD_PASSWORD }}
-          map_api_token: ${{ secrets.MAP_API_TOKEN }}
+          map_url: ${{ secrets.MAP_URL }}
           email_host_user: ${{ secrets.EMAIL_HOST_USER }}
           email_host_password: ${{ secrets.EMAIL_HOST_PASSWORD }}
           DISPLAY: :99
