--- a/manyfews/package.json
+++ b/manyfews/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.4",
     "bootstrap": "^5.1.3",
+    "d3-scale-chromatic": "^3.0.0",
     "jquery": "^3.6.0"
   }
 }
