--- a/.github/workflows/run_unitTest_GenerateRiverFlows.yml
+++ b/.github/workflows/run_unitTest_GenerateRiverFlows.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: psf/black@stable
         with:
-          version: "19.10b0"
+          version: "22.3.0"
       - name: Install dependencies
         run: |
           sudo apt-get install binutils libproj-dev gdal-bin
