--- a/condaEnv/manyFEMSenv.yml
+++ b/condaEnv/manyFEMSenv.yml
@@ -13,7 +13,7 @@ dependencies:
   - django-celery-beat
   - django-crispy-forms
   # dev dependencies
-  - black
+  - black=22.3.0
   - pre-commit
   - pytest
   - retrying
