--- a/condaEnv/manyFEMSenv.yml
+++ b/condaEnv/manyFEMSenv.yml
@@ -13,6 +13,7 @@ dependencies:
   - django-celery-beat
   - django-crispy-forms
   - twilio
+  - python-geotiff
   # dev dependencies
   - black=22.3.0
   - pre-commit
