--- a/condaEnv/manyFEMSenv.yml
+++ b/condaEnv/manyFEMSenv.yml
@@ -19,11 +19,12 @@ dependencies:
   - pytest
   - retrying
   - selenium
+  - pygrib
+  - gdal
   - pip:
     - django-geojson==3.2.0
     - django-environ
     - django-phonenumber-field[phonenumberslite]
     - git+https://github.com/mt-climate-office/Zentra-API
-    - pygrib
     - tqdm
 prefix: /usr/local/Caskroom/miniconda/base/envs/ManyFEWS
