Pin selenium version number at 4.4.0 per #81 and set additional environment variables

--- a/manyfews/manyfews/.env.CI
+++ b/manyfews/manyfews/.env.CI
@@ -16,3 +16,5 @@ twilio_account_sid=twilioAccontSID
 twilio_auth_token=twilioAuthToken
 twilio_phone_number=twilioPhoneNumber
 twilio_verification_sid=twilioVerificationServiceId
+allowed_hosts=127.0.0.1
+debug=True
