--- a/condaEnv/manyFEMSenv.yml
+++ b/condaEnv/manyFEMSenv.yml
@@ -13,14 +13,14 @@ dependencies:
   - django-celery-beat
   - django-crispy-forms
   - twilio
+  - pygrib
+  - gdal
   # dev dependencies
   - black=22.3.0
   - pre-commit
   - pytest
   - retrying
-  - selenium
-  - pygrib
-  - gdal
+  - selenium==4.4.0
   - pip:
     - django-geojson==3.2.0
     - django-environ
