--- a/config/manyFEMSenv.yml
+++ b/config/manyFEMSenv.yml
@@ -4,6 +4,7 @@ channels:
   - defaults
 dependencies:
   - numpy=1.21.2
+  - pandas=1.4.4
   - xlrd=1.2.0
   - pip
   - psycopg2
@@ -15,6 +16,7 @@ dependencies:
   - twilio
   - pygrib
   - gdal
+  - gunicorn
   # dev dependencies
   - black=22.3.0
   - pre-commit
