--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,15 @@ services:
       RABBITMQ_DEFAULT_PASS: ${rabbitmq_password}
     # ports:
     #   - 5672:5672 # AMQP no TLS
+    networks:
+      - backend
 
 
   # PostGIS server
   postgres:
     image: postgis/postgis:14-3.2
     container_name: ${COMPOSE_PROJECT_NAME}_postgres
+    restart: unless-stopped
     environment:
       # must specify password for PG Docker container image, see: https://registry.hub.docker.com/_/postgres?tab=description&page=1&name=10
       POSTGRES_DB: ${db_name}
@@ -31,6 +34,10 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    volumes:
+      - postgresql:/var/lib/postgresql
+    networks:
+      - backend
 
 
   # Celery container runs from the same image as the django container below
@@ -38,6 +45,7 @@ services:
     container_name: ${COMPOSE_PROJECT_NAME}_celery
     build:
       context: .
+      target: manyfews
     user: celery:celery
     restart: unless-stopped
     env_file:
@@ -45,40 +53,65 @@ services:
     environment:
       CELERY_BROKER_URL: "amqp://manyfews:${rabbitmq_password}@rabbitmq:5672/"
     depends_on:
-      - "rabbitmq"
+      - rabbitmq
     working_dir: /app/
     command: celery -A manyfews worker --loglevel=INFO --scheduler django_celery_beat.schedulers:DatabaseScheduler
+    networks:
+      - backend
 
 
-  # Django container
+  # Gunicorn container running Django app with uWSGI
   #
   # Run commands within the running container using:
   # docker exec -it <container_id> /bin/bash
   # Use `docker ps` to find the <container_id>
-  django:
-    container_name: ${COMPOSE_PROJECT_NAME}_django
+  gunicorn:
+    container_name: ${COMPOSE_PROJECT_NAME}_gunicorn
     build:
       context: .
-    # restart: unless-stopped
+      target: manyfews
+      args:
+        zentra_un: $zentra_un
+    restart: unless-stopped
     env_file:
       - .env
     environment:
       CELERY_BROKER_URL: "amqp://manyfews:${rabbitmq_password}@rabbitmq:5672/"
-
     depends_on:
-      - "postgres"
-      - "rabbitmq"
-      - "celery"
+      - postgres
+      - rabbitmq
+      - celery
+    entrypoint: [
+      "bash", "--login", "-c",
+      "python manage.py migrate && \
+      gunicorn --timeout=300 --log-file=- --bind=0.0.0.0:5000 manyfews.wsgi"
+    ]
+    networks:
+      - backend
+
+
+  # Web server container
+  nginx:
+    build:
+      context: .
+      target: deploy
+    container_name: ${COMPOSE_PROJECT_NAME}_nginx
+    restart: unless-stopped
+    depends_on:
+      - gunicorn
+    volumes:
+      - "${PWD}/config/subsite.conf:/etc/nginx/conf.d/default.conf"
+    networks:
+      - backend
+      - default
     ports:
-      - 8000:8000
+      - "80:80/tcp"
 
-    entrypoint:
-      [ "bash", "--login", "-c", 
-        "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
 
-# You don't need this for production because the Dockerfile
-# does COPY . /app, but it can help for development!
-#    volumes:
-#      - "${PWD}/Data/:/app/Data"
-#      - "${PWD}/server/:/app/"
+# Define networks and volumes
+networks:
+  backend:
+  default:
 
+volumes:
+  postgresql:
